<resources>
    <string name="app_name">BlackFishDemo</string>
    <string name="btn_splash_login">开启新生活</string>
    <string name="splash_msg_1">小黑鱼</string>
    <string name="splash_msg_2">会员制消费服务平台</string>
    <string name="splash_msg_3">小黑鱼黑金会员</string>
    <string name="splash_msg_4">会员权益 重磅升级</string>
    <string name="splash_msg_5">小黑鱼旅行</string>
    <string name="splash_msg_6">机票/火车票/酒店 专享优惠</string>
    <string name="registered">注册</string>
    <string name="login">登录</string>
    <string name="Tecentlogin">QQ登录</string>
    <string name="WeChatLogin">微信登录</string>
    <string name="pleaseIntoPhoneNumber">请输入手机号码</string>
    <string name="pleaseIntoPhonePassword">输入当前登录密码</string>
    <string name="registered_msg1">我已注册，请使用密码登录</string>
    <string name="registered_msg2">短信快捷登录</string>
    <string name="losePassword">忘记密码</string>
    <string name="btn_registered_msg1">下一步</string>
    <string name="btn_registered_msg2">登录</string>
    <string name="other_login_message">其他登录方式</string>
    <string name="Tencent">QQ</string>
    <string name="WeChat">微信</string>
    <string name="Prompt">提示:</string>
    <string name="passwordError">密码错误！请核对</string>
    <string name="Reset">重置</string>
    <string name="InputVerificationCode">输入验证码</string>
    <string name="losePassword_Message1">请输入正确验证码，以防假冒</string>
    <string name="losePasswordMessageError1">验证码失效，请重新获取</string>
    <string name="losePasswordMessageError2">验证码获取过程发生未知错误，请检查网络重新获取</string>
    <string name="InputNewPassword">请输入新的登录密码</string>
    <string name="newstringpasswordhint">6-20位，不能为纯数字或纯字母</string>
    <string name="submission">提交</string>
    <string name="setpassword">设置登录密码</string>
    <string name="service_msg">商城承诺此商品非假冒品牌(包括盗版)商品，非未经报关的进口商品，非假冒材质成分商品。</string>
    <string name="service_msg1">此商品由京东供货并提供配送服务</string>
    <string name="goods_text">收纳博士（DR.STORAGE） 9丝加厚真空收纳压缩袋 8只装【4特大4中】内含手动抽气泵</string>

    <string name="image_desc">ImageView</string>
</resources>
