<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="100dp"
    android:layout_gravity="center"
    android:background="@drawable/alert_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_messageTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/passwordError"
        android:textColor="@color/Black"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/Black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Tv_lose_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/losePassword"
            android:textColor="@color/Black" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/Black" />

        <TextView
            android:id="@+id/Tv_Reset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Reset"
            android:textColor="@color/Black" />

    </LinearLayout>


</LinearLayout>