<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.v7.widget.Toolbar
        android:id="@+id/Toolbar_fragment_losepassword_1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingTop="25dp">

        <ImageView
            android:id="@+id/icon_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_icon_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setpassword"
            android:textColor="@color/Black"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <View
        android:id="@+id/view_Toolbar_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/Toolbar_fragment_losepassword_1"
        android:layout_marginTop="10dp"
        android:background="@color/Gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_Toolbar_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/InputNewPassword"
        android:textColor="@color/Black"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/Relayout_PhonePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp">

        <LinearLayout
            android:id="@+id/linear_userPassword_line"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Ed_ChangePhonePassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:background="@color/White"
                android:editable="false"
                android:hint="@string/newstringpasswordhint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/Black"
                android:textColorHint="@color/colorGray696969"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgView_icon_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/linear_userPassword_line"
            android:src="@drawable/user_icon_circle_clear"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imgView_icon_showType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/imgView_icon_clean"
            android:src="@drawable/user_icon_eye_close_blue" />

        <View
            android:id="@+id/view_phoneNumber_line"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:layout_below="@+id/linear_userPassword_line"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorGoldFFC125" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_lose3_submission"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/Relayout_PhonePassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_btn_khakil_bg"
        android:text="@string/submission"
        android:textColor="@color/colorGray696969"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/Iv_fragment_losepassword_bottom_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/user_icon_login_loading" />


</RelativeLayout>