<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/user_icon_logo_circle" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/Relayout_PhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:id="@+id/linear_userPhone_line"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/user_icon_phone_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:scaleType="center"
                    android:src="@drawable/user_icon_phone_login" />

                <EditText
                    android:id="@+id/Ed_uerPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="8"
                    android:background="@color/White"
                    android:editable="false"
                    android:hint="@string/pleaseIntoPhoneNumber"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:numeric="integer"
                    android:singleLine="true"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/colorGray696969"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/icon_PhoneNumber_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/linear_userPhone_line"
                android:src="@drawable/user_icon_circle_clear"
                android:visibility="invisible" />

            <View
                android:id="@+id/view_phoneNumber_line"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_below="@+id/linear_userPhone_line"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGoldFFC125" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/Relayout_PhonePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Relayout_PhoneNumber"
            android:layout_marginTop="40dp">


            <LinearLayout
                android:id="@+id/linear_userPassword_line"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/user_icon_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:scaleType="center"
                    android:src="@drawable/user_icon_password" />

                <EditText
                    android:id="@+id/Ed_uerPassword"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="8"
                    android:background="@color/White"
                    android:editable="false"
                    android:hint="@string/pleaseIntoPhonePassword"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/colorGray696969"
                    android:textSize="14sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/icon_Password_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/linear_userPassword_line"
                android:src="@drawable/user_icon_circle_clear"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/icon_eye_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/icon_Password_clean"
                android:src="@drawable/user_icon_eye_close_blue" />

            <View
                android:id="@+id/view_phonePassword_line"
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_below="@+id/linear_userPassword_line"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGrayE8E8E8" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Tv_registered_msg1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/registered_msg1"
                android:textColor="@color/colorYellofbe328"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/tv_user_losePassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/losePassword"
                android:textColor="@color/colorYellofbe328"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_registered_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_btn_orange_bg"
            android:text="@string/btn_registered_msg1"
            android:textColor="@color/colorGray696969"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/linear_message_line"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/colorGray696969" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/other_login_message"
                android:textColor="@color/colorGray696969"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/colorGray696969" />

        </LinearLayout>

        <ImageView
            android:id="@+id/user_icon_qq"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_below="@id/linear_message_line"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/user_icon_qq" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_icon_qq"
            android:layout_marginStart="114dp"
            android:layout_marginTop="10dp"
            android:text="@string/Tencent"
            android:textColor="@color/colorGray707061"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/user_icon_wechat_login"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/linear_message_line"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/user_icon_wechat_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/user_icon_wechat_login"
            android:layout_marginEnd="110dp"
            android:layout_marginTop="10dp"
            android:text="@string/WeChat"
            android:textColor="@color/colorGray707061"
            android:textSize="12sp" />


    </RelativeLayout>

</LinearLayout>