<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:scaleType="fitXY"
            android:src="@drawable/scp_flash_pay_gold_bg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/White">

            <LinearLayout
                android:id="@+id/layout_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_btn_white_bg"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/colorGray696969"
                    android:textSize="16sp" />


                <Button
                    android:id="@+id/btn_registered"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_btn_yellow_bg"
                    android:gravity="center"
                    android:text="@string/registered"
                    android:textColor="@color/colorGray696969"
                    android:textSize="16sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_btns">

                <TextView
                    android:id="@+id/tv_view1"
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="55dp"
                    android:background="@color/colorGrayCFCFCF" />

                <ImageView
                    android:id="@+id/user_icon_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/tv_view1"
                    android:src="@drawable/user_icon_qq" />

                <ImageView
                    android:id="@+id/user_icon_wechat_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_toStartOf="@+id/tv_view2"
                    android:src="@drawable/user_icon_wechat_login" />

                <TextView
                    android:id="@+id/tv_view2"
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="55dp"
                    android:background="@color/colorGrayCFCFCF" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/user_icon_qq"
                    android:layout_below="@+id/user_icon_qq"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/Tecentlogin"
                    android:textColor="@color/colorGray696969"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/user_icon_wechat_login"
                    android:layout_below="@id/user_icon_wechat_login"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/WeChatLogin"
                    android:textColor="@color/colorGray696969"
                    android:textSize="12sp" />


            </RelativeLayout>


        </RelativeLayout>

    </LinearLayout>


</FrameLayout>